src/objects/Unit_Allied_Charge_Txn_Hdr__c.object
<CustomObject>
    <fields>
        <fullName>Applicable_to__c</fullName>
        <label>Applicable to</label>
        <picklist>
            <picklistValues>
                <fullName>All Units</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On the Basis of Part of Unit No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On the Basis of Unit Types</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Applied_On__c</fullName>
        <label>Applied On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Global_Charges__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Global Charges</label>
        <referenceTo>Global_Charges__c</referenceTo>
        <relationshipLabel>Unit Allied Charge Txn Hdrs</relationshipLabel>
        <relationshipName>Unit_Allied_Charge_Txn_Hdrs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Global_Unit_of_Measurement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Global Unit of Measurement</label>
        <referenceTo>Global_Unit_Of_Measurement__c</referenceTo>
        <relationshipLabel>Unit Allied Charge Txn Hdrs</relationshipLabel>
        <relationshipName>Unit_Allied_Charge_Txn_Hdrs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Area_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Area Type</label>
        <referenceTo>Project_Area_Type__c</referenceTo>
        <relationshipLabel>Unit Allied Charge Txn Hdrs</relationshipLabel>
        <relationshipName>Unit_Allied_Charge_Txn_Hdrs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Unit Allied Charge Txn Hdrs</relationshipLabel>
        <relationshipName>Unit_Allied_Charge_Txn_Hdrs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rate_Amount_Value__c</fullName>
        <label>Rate/Amount Value</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rate_Amount__c</fullName>
        <label>Rate/Amount</label>
        <picklist>
            <picklistValues>
                <fullName>Rate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amount</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Remove_Charge__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Remove Charge</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Standard_Pay_Plan_Header__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Standard Pay Plan Header</label>
        <referenceTo>Standard_Pay_Plan_Header__c</referenceTo>
        <relationshipLabel>Unit Allied Charge Txn Hdrs</relationshipLabel>
        <relationshipName>Unit_Allied_Charge_Txn_Hdrs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Unprocessed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Processed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Unit Allied Charge Txn Hdr</label>
    <nameField>
        <label>Unit Allied Charge Txn Hdr Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Unit Allied Charge Txn Hdrs</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>